[tool.poetry]
name = "fix_video"
version = "0.1.0"
description = ""
authors = ["Fabio Kfouri <kfouri.fabio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.14.1"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# [[tool.poetry.source]]
# name = "nexus_ci"
# url = "https://nexus.net/repository/pypi-proxy/simple"
# priority = "explicit"
# 
# [[tool.poetry.source]]
# name = "nexus_dev"
# url = "https://nexus-dev.net/repository/pypi-proxy/simple"
# priority = "primary"
#  
# [[tool.poetry.source]]
# name = "gitlab"
# url = "https://git.net/api/v4/projects/1656/packages/pypi/simple"
# priority = "explicit"

#######################################################
# LINTERS - RUFF | Isort | Black
#######################################################
[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]
# select = ["A", "B", "C", "D", "E", "F", "I", "N", "PL", "RUF", "S", "T", "W"]
lint.fixable = ["ALL"]
lint.ignore = ["D203", "D213", "T201", "PLE1205"]
exclude = [
    "tests/*",
    ".venv/*",
    "build",
    "dist",
    "node_modules"
]
lint.per-file-ignores = {}
# Same as Black.

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# [tool.ruff.lint.pydocstyle]
# convertion="google"


[tool.black]
line-length = 120
extend-exclude='''
.temp-*
| venv
| .venv
'''

#######################################################
# Poetry Scripts & Taskipy
#######################################################
[tool.poetry.scripts]
syncro_git = "src.fix:syncro_git"

[tool.taskipy.tasks]
pre_lint = { cmd = "echo 'Black' && black .", help = "apply the black linter"}
lint = { cmd = "ruff check . --fix", help = "apply ruff linter"}
